gpg: implement keybox compression run
Closed, ResolvedPublic

Assigned To
Authored By
ilf
Jul 18 2019, 9:33 PM
Tokens
"Like" token, awarded by stm.

Description

But the keybox file didn't get any smaller:

Good catch. In gpg we have not implenteted the compression run:

https://lists.gnupg.org/pipermail/gnupg-users/2019-July/062398.html

814                 /* FIXME: Do a compress run if needed and no other
815                    user is currently using the keybox. */

https://git.gnupg.org/cgi-bin/gitweb.cgi?p=gnupg.git;a=blob;f=g10/keydb.c#l814

Details

Version
2.2.16

Related Objects

Event Timeline

werner triaged this task as Normal priority.Jul 31 2019, 8:53 AM
werner added a project: gnupg (gpg22).
werner renamed this task from gpg: implent keybox compression run to gpg: implement keybox compression run.Aug 23 2019, 10:48 AM
werner moved this task from Backlog to For next release on the gnupg (gpg22) board.
werner changed the task status from Open to Testing.Aug 23 2019, 4:23 PM
werner added a subscriber: werner.

Implemented master and 2.2. Note that the comment in the master commit about possible reason for stucked keylisting in gpgsm is only related to master.

werner lowered the priority of this task from Normal to Wishlist.Aug 23 2019, 4:24 PM
werner moved this task from For next release to Ready for release on the gnupg (gpg22) board.
werner raised the priority of this task from Wishlist to Normal.Aug 23 2019, 4:26 PM

oops: That was an accidential priority change